--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <body>
     <header>
       <h1>Lista de Tarefas</h1>
+      <nav>
+        <a href="home">Home</a>
+      </nav>
     </header>
 
     <ul>
